<resources>
    <string name="app_name">CineSync</string>
    <string name="title_activity_home">CineSync</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My Entertainment Memos</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tvshow">TV Shows</string>
    <string name="menu_movies">Movies</string>
    <string name="menu_upload_tvshow">TV Show Memos</string>
    <string name="menu_upload_movie">Movie Memos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_upload_anthology">Anthology Memos</string>
    <string name="menu_anthology">Anthology</string>
</resources>